<resources>
    <string name="app_name">MarsNotes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="node_date_title_text">Дата заметки</string>
    <string name="node_time_title_text">Время заметки</string>
    <string name="date_image_description">Date picker</string>
    <string name="time_image_description">Time picker</string>
    <string name="about_program">Информация О программе</string>
    <string name="settings_string">Настройки</string>
    <string name="menu_item_new_note">Новая заметка</string>
    <string name="menu_item_edit_note">Изменить заметку</string>
    <string name="menu_item_delete_note">Удалить заметку</string>
    <string name="menu_item_about">О программе</string>
    <string name="note_image_description">note image</string>
    <string name="drawer_image_description">Header navigation image</string>
    <string name="date_hint">Дата</string>
    <string name="time_hint">Время</string>
    <string name="save_string">Сохранить</string>
    <string name="cancel_string">Отмена</string>
    <string name="dreawer_header_title_text">Записки марсианина</string>
    <string name="dreawer_header_text">Примерный текст для заголовка бокового меню</string>
    <string name="back_text">Назад</string>
    <string name="main_screen">Главный экран</string>
    <string name="fire_store_repo">Хранение в сети</string>
    <string name="google_store_repo">Подключить Google</string>
    <string name="google_vk_repo">Подключить ВК аккаунт</string>
    <string name="no_google_auth">Ошибка авторизации Google</string>
    <string name="confirm_delete_note">Вы действительно хотите удалить записку?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
</resources>