<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/space_16dp"
    android:paddingBottom="@dimen/space_16dp">

    <TextView
        android:id="@+id/settings_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_string"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_setting"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:elevation="@dimen/elevation_item"
        app:layout_constraintBottom_toTopOf="@id/settings_save_btn"
        app:layout_constraintTop_toBottomOf="@id/settings_title_tv">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/setting_fire_store"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fire_store_repo"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/setting_google_store"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/google_store_repo"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/setting_vk_store"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/google_vk_repo"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/settings_save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/settings_cancel_btn"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/settings_cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/settings_save_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>