<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/space_8dp">

    <TextView
        android:id="@+id/note_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="Record 1" />

    <ImageView
        android:id="@+id/note_image"
        android:layout_width="@dimen/note_image_view"
        android:layout_height="@dimen/note_image_view"
        android:layout_marginTop="@dimen/space_16dp"
        android:src="@drawable/notes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/note_title"
        android:contentDescription="@string/note_image_description" />

    <TextView
        android:id="@+id/note_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/note_image"
        app:layout_constraintTop_toTopOf="@id/note_image" />


    <TextView
        android:id="@+id/note_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/date_hint"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintBottom_toTopOf="@id/note_time"
        app:layout_constraintTop_toBottomOf="@id/note_category"
        app:layout_constraintStart_toEndOf="@id/note_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"/>

    <TextView
        android:id="@+id/note_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/time_hint"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_marginTop="@dimen/space_8dp"
        app:layout_constraintBottom_toBottomOf="@id/note_image"
        app:layout_constraintStart_toEndOf="@id/note_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/note_date" />

    <androidx.cardview.widget.CardView
        android:id="@+id/note_description_card"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/space_24dp"
        android:elevation="@dimen/elevation_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/note_image">

        <TextView
            android:id="@+id/note_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            tools:text="description1\ndescription1\ndescription1\ndescription1\n" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>